# mantissa-cnn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
bench/: __init__.py  accuracy.py  plots.py  speed.py
mantissa_cnn/: __init__.py  _engine.py  _numpy_backend.py  datasets.py  layers.py  model.py  models.py
tests/: test_backends.py  test_datasets.py  test_gradients.py  test_layers.py  test_model.py
