[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mantissa-cnn"
version = "0.1.0"
description = "A small, honest CNN classifier on the mantissa C engine"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tekin Ertekin" }]
dependencies = [
    "numpy>=1.20",
    # Engine: "mantissa-nn" >= 0.2.1 (kept in sync with MANTISSA_PIP_NAME in
    # _engine.py). Uncomment once published to PyPI; until then a hard
    # dependency would break `pip install -e .`. A sibling mantissa/ checkout
    # is picked up automatically either way.
    # "mantissa-nn>=0.2.1",
]

[project.optional-dependencies]
bench = ["torch", "tensorflow", "scikit-learn>=1.0", "matplotlib>=3.5"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/tekinertekin/mantissa-cnn"
Engine = "https://github.com/tekinertekin/mantissa"

[tool.setuptools]
packages = ["mantissa_cnn"]

[tool.pytest.ini_options]
filterwarnings = [
    # numpy 2.x on Apple Accelerate emits spurious FPE RuntimeWarnings from the
    # BLAS matmul kernel even on finite inputs (verified finite here; same issue
    # documented in mantissa-perceptron's bench/speed.py).
    "ignore:.*encountered in matmul:RuntimeWarning",
]
